[project]
name = "zs.get-current-coord"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ZackaryW", email = "gitzackw@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"zs.get-current-coord" = "get_current_coord.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/get_current_coord"]
