[project]
name = "zu.curr-coord"
version = "0.1.0"
description = "Get the current coordinates of the mouse"
authors = [
    { name = "ZackaryW", email = "gitzackw@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"zu.curr-coord" = "get_current_coord.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/get_current_coord"]
