[project]
name = "zu.curr-coord"
version = "0.1.0"
description = "Get the current coordinates of the mouse"
authors = [
    { name = "ZackaryW", email = "gitzackw@gmail.com" }
]
dependencies = [
    "click>=8.1.8",
    "screeninfo>=0.8.1",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"zu-curr-coord" = "zu.get_current_coord.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zu"]
